kubernetes/01-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-front
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll      
    keel.sh/pollSchedule: "@every 10m"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-front
  template:
    metadata:
      labels:
        app: todo-app-front
    spec:
      containers:
        - name: todo-backend
          image: alexisc73/todo-app-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
