kubernetes/00-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-front
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: todo-app-front
